# nalog-app

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
app/: __init__.py  auth.py  elements.py  main.py  nalog.py  tables.py  utils.py
app/utils/: __init__.py  container.py  formatter.py  manager.py  settings.py  utils.py
app/windows/: auth.py  main.py  register.py  select_month.py  settings.py
assets/: example.csv
setup/: __init__.py  setup.py
