[tool.poetry]
name = "nalog-app"
version = "0.1.0"
description = ""
authors = ["Ben Puls <mail@benpuls.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
customtkinter = "^5.2.2"
pillow = "^11.0.0"
openpyxl = "^3.1.5"
moy-nalog = "0.3.3"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
